tests/diagnostics/hashmap_bad_key.kal
# A struct cannot be a HashMap key (only integers, bool, str).
struct P { x: i64 }
{ let m: HashMap<P, i64> = hashmap(); printi(len(m)); };
